--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,26 @@
 ---
 layout: page
-title: Say Hello
+title: Erzähl
 permalink: /contact/
 ---
 
 <div class="py2">
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
-      <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="What would you like to say?"></textarea>
+      <input type="text" name="email" class="field-light" placeholder="hallo@mail.com">
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="Was für eine Geschichte beschäftigt dich?"></textarea>
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <button type='submit' class="button button-blue button-big mobile-block">Say Hello</button>
+      <button type='submit' class="button button-blue button-big mobile-block">Erzähl</button>
     </form>
   {% else %}
     <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
-      <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="What would you like to say?"></textarea>
+      <input type="text" name="email" class="field-light" placeholder="hallo@mail.com">
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="Was für eine Geschichte beschäftigt dich?"></textarea>
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="submit" class="button button-blue button-big mobile-block" value="Say Hello">
+      <input type="submit" class="button button-blue button-big mobile-block" value="Erzähl">
     </form>
   {% endif %}
 </div>
